corrected all mistakes after mentor review